# printerfacts

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  deployment.yml
.vim/: coc-settings.json
scripts/: deploy.sh
src/: facts.rs  fairings.rs  lib.rs  main.rs
templates/: deploy.yml  migrations.yml
