[package]
name = "hello4000"
version = "0.1.0"
edition = "2018"
authors = ["William Findlay williamfindlay@cmail.carleton.ca"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hello4000"
path = "src/lib.rs"

[[bin]]
name = "hello4000"
path = "src/main.rs"

[dependencies]
gethostname = "0.2.1"
pfacts = { git = "https://github.com/willfindlay/pfacts-sfw", branch = "main" }
rand = "0.8.4"
rocket = { version = "0.5.0-rc.1", features = ["tls", "json", "uuid"] }
serde_json = "1.0.64"
serde = "1.0.126"
anyhow = "1.0.45"
cdrs = { git = "https://github.com/AlexPikalov/cdrs" }
cdrs_helpers_derive = { git = "https://github.com/AlexPikalov/cdrs-helpers-derive" }
tokio-stream = "0.1.8"
futures = "0.3.17"
structopt = "0.3.25"
uuid = { version = "0.8.2", features = ["serde"] }

[features]
